(library
 (name lib)
 (modules Test_stubgen)
 (libraries ctypes ctypes.stubs)
 (foreign_stubs
  (language c)
  (names test_stubgen test)
  (include_dirs
   (lib ctypes))))

(executable
 (name stubgen)
 (modules Stubgen Test_bindings)
 (public_name stubgen.exe)
 (libraries ctypes ctypes.stubs))

(rule
 (targets Test_stubgen.ml)
 (deps ./stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))

(rule
 (targets test_stubgen.c)
 (deps ./stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c))))
