(library
 (name lib)
 (modules Test_stubgen Lib)
 (libraries ctypes ctypes.stubs test_bindings)
 (foreign_stubs
  (language c)
  (names test_stubgen test)
  (include_dirs
   (lib ctypes))))

(library
 (name test_bindings)
 (modules Test_bindings)
 (libraries ctypes ctypes.stubs))

(executable
 (name stubgen)
 (modules Stubgen)
 (public_name stubgen.exe)
 (libraries test_bindings ctypes ctypes.stubs))

(rule
 (targets Test_stubgen.ml)
 (deps ./stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))

(rule
 (targets test_stubgen.c)
 (deps ./stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c))))
